--- a/templates/post.html
+++ b/templates/post.html
@@ -1,15 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="card mb-3">
-  <div class="card-body">
-    <h2>{{ post.title }}</h2>
-    <p><strong>Category:</strong> {{ post.category }}</p>
-    {% if post.image %}
-    <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid mb-3">
-    {% endif %}
-    <p>{{ post.content }}</p>
-    <a href="/" class="btn btn-secondary">Back to Home</a>
-  </div>
+<div class="mt-3">
+  <h2>{{ post.title }}</h2>
+  <p><strong>Category:</strong> {{ post.category }}</p>
+  {% if post.image %}
+    <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid mb-3" alt="{{ post.title }}">
+  {% endif %}
+  <p>{{ post.content }}</p>
 </div>
 {% endblock %}
