--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-
 {% block content %}
 <h2 class="mt-3">Admin Dashboard</h2>
 
 <h4 class="mt-4">Add New Post</h4>
-<form method="POST" enctype="multipart/form-data">
+<form action="{{ url_for('admin_dashboard') }}" method="POST" enctype="multipart/form-data">
   <div class="mb-2">
     <input type="text" name="title" placeholder="Post Title" class="form-control" required>
   </div>
@@ -30,7 +29,7 @@
   <div class="mb-2">
     <input type="file" name="image" class="form-control">
   </div>
-  <button class="btn btn-primary">Add Post</button>
+  <button type="submit" class="btn btn-primary">Add Post</button>
 </form>
 
 <h4 class="mt-5">All Posts</h4>
@@ -58,5 +57,5 @@
   </tbody>
 </table>
 
-<a href="/admin/logout" class="btn btn-secondary mt-3">Logout</a>
+<a href="{{ url_for('admin_logout') }}" class="btn btn-secondary mt-3">Logout</a>
 {% endblock %}
