--- a/templates/post.html
+++ b/templates/post.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2 class="mt-3">{{ post.title }}</h2>
+<h2>{{ post.title }}</h2>
+<p>Category: {{ post.category }}</p>
 {% if post.image %}
 <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid mb-3">
 {% endif %}
-<p><strong>Category:</strong> {{ post.category }}</p>
 <p>{{ post.content }}</p>
 <a href="/" class="btn btn-secondary mt-3">Back to Home</a>
 {% endblock %}
